--- a/sam.html
+++ b/sam.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
      <script src="https://kit.fontawesome.com/b74eb45656.js" crossorigin="anonymous"></script>
     <title> Cafe AO</title>
-    <link rel="stylesheet" href="stm.css" />
+    <link rel="stylesheet" href="https://roido77.github.io/sam/sam.css" />
   </head>
 
   <body>
