--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="https://roido77.github.io/sam/stm.css" />
   </head>
 
-  <body>
+ <body>
      <header>
-  <div class="header-inner">
   <div class="head">
-  <i class="fa-duotone fa-solid fa-mug-saucer"></i>
+  <i class="fa-duotone fa-solid fa-mug-saucer fa-2x"></i>
   <span class="az">Cafe AO</span>
   </div>
    <div class="social">
@@ -21,7 +20,6 @@
     <i class="fab fa-twitter-square"></i>
     <i class="fab fa-instagram"></i>
 
-  </div>
   </div>
     </header>
   <div class="main"></div>
@@ -75,7 +73,7 @@
    </div>
    <footer>
  <div class="fead">
-  <i class="fa-duotone fa-solid fa-mug-saucer"></i>
+  <i class="fa-duotone fa-solid fa-mug-saucer fa-2x"></i>
   <span class="za">Cafe AO</span>
   </div>
    </footer>
