--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <body>
      <header>
   <div class="head">
-  <i class="fa-duotone fa-solid fa-mug-saucer fa-2x"></i>
+  <i class="fa-duotone fa-solid fa-mug-saucer"></i>
   <span class="az">Cafe AO</span>
   </div>
    <div class="social">
