--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
  <body>
      <header>
+<div class="header-inner">
   <div class="head">
   <i class="fa-duotone fa-solid fa-mug-saucer"></i>
   <span class="az">Cafe AO</span>
@@ -21,6 +22,7 @@
     <i class="fab fa-instagram"></i>
 
   </div>
+</div>
     </header>
   <div class="main"></div>
   <div class="mains">
