--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
    </div>
    <footer>
  <div class="fead">
-  <i class="fa-duotone fa-solid fa-mug-saucer"></i>
+  <i class="fa-duotone fa-solid fa-mug-saucer fa-2x"></i>
   <span class="za">Cafe AO</span>
   </div>
    </footer>
